home-k8s/apps/prh/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prh-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: prh-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prh-web
    spec:
      automountServiceAccountToken: false
      hostUsers: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      imagePullSecrets:
        - name: regcred
      containers:
        - name: web
          image: ghcr.io/sigurs/prh:latest
          args: ["web"]
          ports:
            - containerPort: 8000
              name: http
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
      volumes:
        - name: tmp
          emptyDir: {}
