home-k8s/apps/prh/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prh-web
spec:
  selector:
    app.kubernetes.io/name: prh-web
  ports:
    - name: http
      port: 80
      targetPort: http
